--- a/content/resources/15-599f11.md
+++ b/content/resources/15-599f11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: In this course, students learn about swarm creativity, a metaphor inspired
   by nature's swarm expert. Image courtesy of John Biehler on Flickr.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/272e5b76d06116e0f84f048c6f7f5762_15-599f11.jpg
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/272e5b76d06116e0f84f048c6f7f5762_15-599f11.jpg
 file_type: image/jpeg
 image_metadata:
   caption: In this course, students learn about swarm creativity, a metaphor inspired
@@ -10,6 +10,8 @@ image_metadata:
     on Flickr.)
   credit: Image courtesy of John Biehler on Flickr.
   image-alt: Image of a bee.
+learning_resource_types: []
+ocw_type: OCWImage
 resourcetype: Image
 title: 15-599f11.jpg
 uid: 272e5b76-d061-16e0-f84f-048c6f7f5762
