--- a/content/resources/mit15_599f11_lec01.md
+++ b/content/resources/mit15_599f11_lec01.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/a52684441974c86f3e2e77940398077e_MIT15_599F11_lec01.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/a52684441974c86f3e2e77940398077e_MIT15_599F11_lec01.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec01.pdf
 uid: a5268444-1974-c86f-3e2e-77940398077e
