--- a/content/resources/mit15_599f11_lec02.md
+++ b/content/resources/mit15_599f11_lec02.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/486e1fef53505e1cf826853867f5c36b_MIT15_599F11_lec02.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/486e1fef53505e1cf826853867f5c36b_MIT15_599F11_lec02.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec02.pdf
 uid: 486e1fef-5350-5e1c-f826-853867f5c36b
