--- a/content/resources/mit15_599f11_lec03.md
+++ b/content/resources/mit15_599f11_lec03.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/0c629a094884241d81d454136dbbdffc_MIT15_599F11_lec03.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/0c629a094884241d81d454136dbbdffc_MIT15_599F11_lec03.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec03.pdf
 uid: 0c629a09-4884-241d-81d4-54136dbbdffc
