--- a/content/resources/mit15_599f11_lec05.md
+++ b/content/resources/mit15_599f11_lec05.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/991632e9af2e456256eb9d7c6312e603_MIT15_599F11_lec05.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/991632e9af2e456256eb9d7c6312e603_MIT15_599F11_lec05.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec05.pdf
 uid: 991632e9-af2e-4562-56eb-9d7c6312e603
