--- a/content/resources/mit15_599f11_lec06.md
+++ b/content/resources/mit15_599f11_lec06.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/f0bdb7abdb6b52669c41b41999ee980f_MIT15_599F11_lec06.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/f0bdb7abdb6b52669c41b41999ee980f_MIT15_599F11_lec06.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec06.pdf
 uid: f0bdb7ab-db6b-5266-9c41-b41999ee980f
