--- a/content/resources/mit15_599f11_lec09.md
+++ b/content/resources/mit15_599f11_lec09.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/58274759dbede87ffb8ee7bea1d2f599_MIT15_599F11_lec09.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/58274759dbede87ffb8ee7bea1d2f599_MIT15_599F11_lec09.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec09.pdf
 uid: 58274759-dbed-e87f-fb8e-e7bea1d2f599
