--- a/content/resources/mit15_599f11_lec11.md
+++ b/content/resources/mit15_599f11_lec11.md
@@ -1,8 +1,13 @@
 ---
 content_type: resource
 description: This resource contains information regarding lecture notes.
-file: /media/https%3A/open-learning-course-data-rc.s3.amazonaws.com/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/ea23f3c5843a42de996ab24b92254e46_MIT15_599F11_lec11.pdf
+file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/ea23f3c5843a42de996ab24b92254e46_MIT15_599F11_lec11.pdf
 file_type: application/pdf
+learning_resource_types:
+- Lecture Notes
+ocw_type: OCWFile
+parent_title: Lecture Notes
+parent_type: CourseSection
 resourcetype: Document
 title: MIT15_599F11_lec11.pdf
 uid: ea23f3c5-843a-42de-996a-b24b92254e46
