--- a/content/resources/15-599f11-th.md
+++ b/content/resources/15-599f11-th.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: In this course, students learn about swarm creativity, a metaphor inspired
   by nature's swarm expert. Image courtesy of John Biehler on Flickr.
-file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/7014d66e6d91b027d294a26c7b9a1dab_15-599f11-th.jpg
+file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/7014d66e6d91b027d294a26c7b9a1dab_15-599f11-th.jpg
 file_type: image/jpeg
 image_metadata:
   caption: In this course, students learn about swarm creativity, a metaphor inspired
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 15-599f11-th.jpg
 uid: 7014d66e-6d91-b027-d294-a26c7b9a1dab
 ---
+In this course, students learn about swarm creativity, a metaphor inspired by nature's swarm expert. Image courtesy of John Biehler on Flickr.
+
