--- a/content/resources/15-599f11.md
+++ b/content/resources/15-599f11.md
@@ -2,7 +2,7 @@
 content_type: resource
 description: In this course, students learn about swarm creativity, a metaphor inspired
   by nature's swarm expert. Image courtesy of John Biehler on Flickr.
-file: /media/courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/272e5b76d06116e0f84f048c6f7f5762_15-599f11.jpg
+file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/272e5b76d06116e0f84f048c6f7f5762_15-599f11.jpg
 file_type: image/jpeg
 image_metadata:
   caption: In this course, students learn about swarm creativity, a metaphor inspired
@@ -16,3 +16,5 @@ resourcetype: Image
 title: 15-599f11.jpg
 uid: 272e5b76-d061-16e0-f84f-048c6f7f5762
 ---
+In this course, students learn about swarm creativity, a metaphor inspired by nature's swarm expert. Image courtesy of John Biehler on Flickr.
+
