--- a/content/resources/15-599f11-th.md
+++ b/content/resources/15-599f11-th.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: Image courtesy of John Biehler on Flickr.
   image-alt: Image of a bee.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-599f11-th.jpg
 uid: 7014d66e-6d91-b027-d294-a26c7b9a1dab
 ---
 In this course, students learn about swarm creativity, a metaphor inspired by nature's swarm expert. Image courtesy of John Biehler on Flickr.
-
