--- a/content/resources/15-599f11.md
+++ b/content/resources/15-599f11.md
@@ -11,10 +11,10 @@ image_metadata:
   credit: Image courtesy of John Biehler on Flickr.
   image-alt: Image of a bee.
 learning_resource_types: []
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWImage
 resourcetype: Image
 title: 15-599f11.jpg
 uid: 272e5b76-d061-16e0-f84f-048c6f7f5762
 ---
 In this course, students learn about swarm creativity, a metaphor inspired by nature's swarm expert. Image courtesy of John Biehler on Flickr.
-
