--- a/content/resources/mit15_599f11_lec01.md
+++ b/content/resources/mit15_599f11_lec01.md
@@ -5,6 +5,7 @@ file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_599F11_lec01.pdf
 uid: a5268444-1974-c86f-3e2e-77940398077e
 ---
 This resource contains information regarding lecture notes.
-
