--- a/content/resources/mit15_599f11_lec08.md
+++ b/content/resources/mit15_599f11_lec08.md
@@ -5,6 +5,7 @@ file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
+license: https://creativecommons.org/licenses/by-nc-sa/4.0/
 ocw_type: OCWFile
 parent_title: Lecture Notes
 parent_type: CourseSection
@@ -14,4 +15,3 @@ title: MIT15_599F11_lec08.pdf
 uid: c7d7c450-6c20-0887-fd8d-91bd1c94e0a6
 ---
 This resource contains information regarding lecture notes.
-
