--- a/content/resources/15-599f11.md
+++ b/content/resources/15-599f11.md
@@ -3,11 +3,12 @@ content_type: resource
 description: In this course, students learn about swarm creativity, a metaphor inspired
   by nature's swarm expert. Image courtesy of John Biehler on Flickr.
 file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/272e5b76d06116e0f84f048c6f7f5762_15-599f11.jpg
+file_size: 42902
 file_type: image/jpeg
 image_metadata:
   caption: In this course, students learn about swarm creativity, a metaphor inspired
-    by nature's swarm expert. (Image courtesy of [John Biehler](http://www.flickr.com/photos/retrocactus/402294133/)
-    on Flickr.)
+    by nature's swarm expert. (Image courtesy of {{% resource_link "d74d49bc-29c0-418a-bf47-befd23e4d486"
+    "John Biehler" %}} on Flickr.)
   credit: Image courtesy of John Biehler on Flickr.
   image-alt: Image of a bee.
 learning_resource_types: []
