--- a/content/resources/15-599f11.md
+++ b/content/resources/15-599f11.md
@@ -7,8 +7,8 @@ file_size: 42902
 file_type: image/jpeg
 image_metadata:
   caption: In this course, students learn about swarm creativity, a metaphor inspired
-    by nature's swarm expert. (Image courtesy of {{% resource_link "d74d49bc-29c0-418a-bf47-befd23e4d486"
-    "John Biehler" %}} on Flickr.)
+    by nature's swarm expert. (Image courtesy of [John Biehler](http://www.flickr.com/photos/retrocactus/402294133/)
+    on Flickr.)
   credit: Image courtesy of John Biehler on Flickr.
   image-alt: Image of a bee.
 learning_resource_types: []
