--- a/content/resources/mit15_599f11_lec04.md
+++ b/content/resources/mit15_599f11_lec04.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding lecture notes.
 file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/278df2377b30ed8119f9b751553298b8_MIT15_599F11_lec04.pdf
+file_size: 1252801
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
