--- a/content/resources/mit15_599f11_lec12.md
+++ b/content/resources/mit15_599f11_lec12.md
@@ -2,6 +2,7 @@
 content_type: resource
 description: This resource contains information regarding lecture notes.
 file: /courses/15-599-workshop-in-it-collaborative-innovation-networks-fall-2011/594be69ef567714991d6b913b63c03fe_MIT15_599F11_lec12.pdf
+file_size: 1463519
 file_type: application/pdf
 learning_resource_types:
 - Lecture Notes
